# vinyasa

./: README.md  pyproject.toml  vinyasa.py
examples/: first_slow_operation.py  reusing_results_from_previous_steps.py
